# fortranTaskOne

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  data_c_o1  data_c_o2  data_c_o3  data_o1  data_o2  data_o3  fort.20  fruit.mod  fruit_util.mod  gauss.mod  gauss_test.mod  matrice_ops.mod  matrice_ops_test.mod  task.mod
Testing/Temporary/: CTestCostData.txt
graphs/: data_c_o 4_ 1  data_c_o 4_ 2  data_c_o 4_ 4  data_c_o 4_ 5  data_c_o 4_ 6  data_c_o 4_ 7  data_c_o 4_ 8  data_c_o 4_ 9  data_c_o 4_**  data_c_o 4_10  data_c_o 4_11  data_c_o 4_12  data_c_o 4_13  data_c_o 4_14  data_c_o 4_15  data_c_o 4_16  data_c_o 4_17  data_c_o 4_18  data_c_o 4_19  data_c_o 4_20  data_c_o 4_21  data_c_o 4_22  data_c_o 4_23  data_c_o 4_24  data_c_o 4_25  data_c_o 4_26  data_c_o 4_27  data_c_o 4_28  data_c_o 4_29  data_c_o 4_30  data_c_o 4_31  data_c_o 4_32  data_c_o 4_33  data_c_o 4_34  data_c_o 4_35  data_c_o 4_36  data_c_o 4_37  data_c_o 4_38  data_c_o 4_39  data_c_o 4_40  (+564 more)
src/: gauss.f90  matrice_ops.f90  task.f90  tests.f90
tests/: unit_tests.txt
